# LearnTry-ML

./: .gitignore
Caffe-py/: .gitignore  IterateBlobs.ipynb  ZeroCellsAnalysis_batch30.xlsx  basics.ipynb  inceptionV3-analysis.ipynb  inceptionV3-analysis.py  results2x2.csv  results4x4.csv
Data/: regressionData.csv
Keras/keras_examples/: Image classification from scratch.ipynb  Image segmentation with a U-Net-like architecture.ipynb
RL/RL-An-Introduction-book/: Chapter-1-Introduction.ipynb  Chapter2-BanditProblems.ipynb
RL/Udemy-Advanced-RL/: Sec6_pytorch_lightning.ipynb
RL/hugging-face/: Unit 1 - Train RL agent for LunarLander.ipynb
RL/spinningup/: setup.py
RL/stable-baselines3/: cart-pole.py  lunar-lander.py  minigrid-basic.py
TFlearn/: .gitignore
Tensorflow/: .gitignore
Tensorflow/Hvass-Labs-TF-Tutorials/: 01_Simple_Linear_Model.ipynb  02_Convolutional_Neural_Network.ipynb  03C_Keras_API.ipynb  08_Transfer_Learning.ipynb  17_Estimator_API.ipynb
Tensorflow/tf.gradients/: Mnist-Using-TF-Gradients.ipynb
Tensorflow/tfp-coursera/: Kullback-Leibler divergence.ipynb  Week2-Probabilistic-Layers.ipynb  Week3-VAE.ipynb  (+1 more)
llm/a2a_adk/google_adk/: README.md  __main__.py  agent.py  agent_template.py  calc_main.py  code_exec_main.py  code_execute_subagent.py  pyproject.toml  task_manager.py
notebooks/: Calculating max-log-likelihood without graidient descent.ipynb  Graphlab-ModelParameterSearch.ipynb  RegressionUsingSknn-scikit-neuralnetwork-theano.ipynb  Understanding Log likelihood.ipynb  plotting-distribution.ipynb
pytorch/: Moons-dataset.ipynb
(+342 files in other folders)
